# Project-Tree-Generator-Pro

./: .gitignore  LICENSE  README.fa.md  README.md  pyproject.toml  setup.iss  version.txt
.github/workflows/: build.yml
src/: main.py
src/translations/: fa.qm  fa.ts
